<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.Login">

    <data>

        <variable
            name="viewmodel"
            type="com.example.shopbilling.models.viewmodels.LoginModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_32dp"
            android:background="@drawable/custom_edittext"
            app:cardCornerRadius="@dimen/_32dp"
            app:cardElevation="@dimen/_12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_24dp">

                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_heading"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48dp"
                    android:layout_marginTop="@dimen/_40dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/person_add"
                    android:drawablePadding="@dimen/_12dp"
                    android:hint="@string/email_hint"
                    android:padding="@dimen/_12dp"
                    android:text="@={viewmodel.userEmail}"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48dp"
                    android:layout_marginTop="@dimen/_24dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/add_password"
                    android:drawablePadding="@dimen/_12dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="@dimen/_12dp"
                    android:text="@={viewmodel.userPassword}"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/login_text"
                    android:textSize="@dimen/_18sp"
                    app:onClick="@{viewmodel.login}" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24dp"
            android:padding="@dimen/_12dp"
            android:text="@string/not_regostered_hint"
            android:textColor="@color/red"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

</layout>